Reference types and transactions