@@ -5,11 +5,12 @@ import com.openelements.data.runtime.data.DataType;
 import com.openelements.data.runtime.sql.SqlConnection;
 import com.openelements.data.runtime.sql.SqlDialect;
 import com.openelements.data.runtime.sql.types.SqlTypeSupport;
-import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 
 public class SqlDataTable<E extends Record> {
 
@@ -32,7 +33,7 @@ public class SqlDataTable<E extends Record> {
         keyColumns = new ArrayList<>();
         dataType.attributes().forEach(attribute -> {
             final SqlTypeSupport typeSupport = getTypeSupport(attribute.type());
-            TableColumn column = new TableColumn<>(attribute, typeSupport);
+            TableColumn column = new TableColumn<>(this, attribute, typeSupport);
             dataColumns.add(column);
             if (attribute.partOfIdentifier()) {
                 keyColumns.add(column);
@@ -60,28 +61,12 @@ public class SqlDataTable<E extends Record> {
         return Collections.unmodifiableList(dataColumns);
     }
 
-    public List<TableColumn<E, ?, ?>> getDataColumnsWithoutKeys() {
-        final List<TableColumn<E, ?, ?>> dataColumnsCopy = new ArrayList<>(getDataColumns());
-        dataColumnsCopy.removeAll(getKeyColumns());
-        return Collections.unmodifiableList(dataColumnsCopy);
-    }
-
     public List<TableColumn<E, ?, ?>> getKeyColumns() {
         return Collections.unmodifiableList(keyColumns);
     }
 
-    public E convertRow(Map<TableColumn<E, ?, ?>, Object> row, SqlConnection connection)
-            throws InvocationTargetException, NoSuchMethodException, InstantiationException, IllegalAccessException {
-        List<Object> constructorParams = new ArrayList<>();
-        getDataColumns().stream()
-                .forEach(column -> {
-                    final Object rawValue = row.get(column);
-                    final DataAttribute attribute = getAttribute(column);
-                    final SqlTypeSupport typeSupport = getTypeSupport(attribute.type());
-                    final Object value = typeSupport.convertValueFromSqlResult(rawValue, connection);
-                    constructorParams.add(value);
-                });
-        return dataType.createInstance(constructorParams);
+    public List<TableColumn<E, ?, ?>> getMetadataColumns() {
+        return List.of();
     }
 
     public List<TableColumn<E, ?, ?>> getColumns() {
@@ -91,7 +76,38 @@ public class SqlDataTable<E extends Record> {
         return Collections.unmodifiableList(columns);
     }
 
-    public List<TableColumn<E, ?, ?>> getMetadataColumns() {
-        return List.of();
+    public List<TableColumn<E, ?, ?>> getDataColumnsWithoutKeys() {
+        final List<TableColumn<E, ?, ?>> columns = new ArrayList<>(getDataColumns());
+        columns.removeAll(getKeyColumns());
+        return Collections.unmodifiableList(columns);
+    }
+
+    public List<TableColumn<E, ?, ?>> getColumnsWithoutKeys() {
+        final List<TableColumn<E, ?, ?>> columns = new ArrayList<>(getColumns());
+        columns.removeAll(getKeyColumns());
+        return Collections.unmodifiableList(columns);
+    }
+
+    public E convertRow(Map<TableColumn<E, ?, ?>, Object> row, SqlConnection connection) throws Exception {
+        List<Object> constructorParams = new ArrayList<>();
+        for (DataAttribute<E, ?> attribute : dataType.attributes()) {
+            TableColumn<E, ?, ?> column = getColumns().stream()
+                    .filter(c -> Objects.equals(attribute, c.getAttribute()))
+                    .findFirst()
+                    .orElseThrow(
+                            () -> new IllegalArgumentException("No column found for attribute: " + attribute.name()));
+            final Object rawValue = row.get(column);
+            final SqlTypeSupport typeSupport = getTypeSupport(attribute.type());
+            final Object normalizedValue = typeSupport.normalizeSqlValue(rawValue);
+            final Object value = typeSupport.convertToJavaValue(normalizedValue, connection);
+            constructorParams.add(value);
+        }
+        return dataType.createInstance(constructorParams);
+    }
+
+    public Optional<TableColumn<E, ?, ?>> getColumnByName(String name) {
+        return getColumns().stream()
+                .filter(column -> column.getName().equals(name))
+                .findFirst();
     }
 }
